[gd_scene load_steps=19 format=2]

[ext_resource path="res://ui/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://ui/TitleContainer-Content.stylebox" type="StyleBox" id=2]
[ext_resource path="res://ui/StartButtonPressed.stylebox" type="StyleBox" id=3]
[ext_resource path="res://ui/RegularButtonNormal.stylebox" type="StyleBox" id=4]
[ext_resource path="res://ui/RegularButtonPressed.stylebox" type="StyleBox" id=5]
[ext_resource path="res://ui/StartButtonHover.stylebox" type="StyleBox" id=6]
[ext_resource path="res://assets/ui/kenvector_future.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://ui/TitledPanelContainer.stylebox" type="StyleBox" id=8]
[ext_resource path="res://assets/background_brown.png" type="Texture" id=9]
[ext_resource path="res://ui/StartButtonNormal.stylebox" type="StyleBox" id=10]
[ext_resource path="res://ui/RegularButtonHover.stylebox" type="StyleBox" id=11]
[ext_resource path="res://ui/RegularFont.res" type="DynamicFont" id=12]
[ext_resource path="res://ui/TitleContainerTitle.res" type="DynamicFont" id=13]

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 9 )
stretch_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer2" type="PanelContainer" parent="CenterContainer"]
margin_left = 362.0
margin_top = 134.0
margin_right = 662.0
margin_bottom = 466.0
custom_styles/panel = ExtResource( 8 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer2"]
margin_top = 16.0
margin_right = 300.0
margin_bottom = 332.0
custom_constants/separation = 8

[node name="Label" type="Label" parent="CenterContainer/PanelContainer2/VBoxContainer"]
margin_right = 300.0
margin_bottom = 26.0
rect_min_size = Vector2( 300, 0 )
custom_colors/font_color = Color( 0.937255, 0.937255, 0.937255, 1 )
custom_fonts/font = ExtResource( 13 )
text = "Stack Still"
align = 1

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/PanelContainer2/VBoxContainer"]
margin_top = 34.0
margin_right = 300.0
margin_bottom = 316.0
custom_styles/panel = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer2/VBoxContainer/PanelContainer"]
margin_left = 16.0
margin_top = 20.0
margin_right = 284.0
margin_bottom = 266.0
custom_constants/separation = 12

[node name="StartButton" type="Button" parent="CenterContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 268.0
margin_bottom = 60.0
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 0.658824, 0.52549, 0, 1 )
custom_colors/font_color_focus = Color( 0.658824, 0.52549, 0, 1 )
custom_colors/font_color = Color( 0.658824, 0.52549, 0, 1 )
custom_colors/font_color_hover = Color( 0.658824, 0.52549, 0, 1 )
custom_colors/font_color_pressed = Color( 0.658824, 0.52549, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = SubResource( 10 )
custom_styles/normal = ExtResource( 10 )
text = "Start"

[node name="OptionsButton" type="Button" parent="CenterContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 268.0
margin_bottom = 122.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 12 )
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = SubResource( 11 )
custom_styles/normal = ExtResource( 4 )
text = "Options"

[node name="CreditsButton" type="Button" parent="CenterContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 134.0
margin_right = 268.0
margin_bottom = 184.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 12 )
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = SubResource( 12 )
custom_styles/normal = ExtResource( 4 )
text = "Credits"

[node name="ExitButton" type="Button" parent="CenterContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 196.0
margin_right = 268.0
margin_bottom = 246.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 12 )
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = SubResource( 13 )
custom_styles/normal = ExtResource( 4 )
text = "Exit"

[connection signal="pressed" from="CenterContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
